[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/walk/hero-run-1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/walk/hero-run-2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/walk/hero-run-4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/walk/hero-run-5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/walk/hero-run-6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/walk/hero-run-3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/jump/hero-jump-4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/jump/hero-jump-2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/jump/hero-jump-3.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/jump/hero-jump-1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/hurt/hero-hurt.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/attack/hero-attack-4.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/attack/hero-attack-1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/crouch/hero-crouch.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/attack/hero-attack-2.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/attack/hero-attack-3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/attack/hero-attack-5.png" type="Texture" id=22]
[ext_resource path="res://Scenes/PlayableCharacters/PlayerCamera.tscn" type="PackedScene" id=23]
[ext_resource path="res://Script/Players/EnergyController.gd" type="Script" id=24]
[ext_resource path="res://Script/Players/LifeController.gd" type="Script" id=25]
[ext_resource path="res://Sprites/HUD/Life.png" type="Texture" id=26]
[ext_resource path="res://Sprites/HUD/energybar.png" type="Texture" id=27]
[ext_resource path="res://Script/Players/CemeteryHero/CemeteryHero.gd" type="Script" id=28]
[ext_resource path="res://Script/Players/CemeteryHero/CemeteryHeroStateMachine.gd" type="Script" id=29]
[ext_resource path="res://Scenes/Menu/Pause.tscn" type="PackedScene" id=30]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ) ],
"loop": true,
"name": "fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 22 ) ],
"loop": false,
"name": "attack",
"speed": 18.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 23 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 11.0

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CemeteryHero" instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 22
script = ExtResource( 28 )

[node name="Body" parent="." index="0"]
position = Vector2( 0, -30 )

[node name="Sprite" parent="Body" index="0"]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="DetectFloorRaycast" type="Node2D" parent="Body" index="1"]

[node name="RayCast2D" type="RayCast2D" parent="Body/DetectFloorRaycast" index="0"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2147483650

[node name="AttackCollision" type="Area2D" parent="Body" index="2"]
visible = false
monitoring = false
monitorable = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/AttackCollision" index="0"]
position = Vector2( 24, 2 )
shape = SubResource( 2 )

[node name="DashCollisionDamage" type="Area2D" parent="Body" index="3"]
visible = false
position = Vector2( 0, 30 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/DashCollisionDamage" index="0"]
position = Vector2( 0, -20 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -21 )
shape = SubResource( 4 )

[node name="AnimationPlayer" parent="." index="2"]
anims/Invincible = SubResource( 5 )

[node name="StateMachine" parent="." index="3"]
script = ExtResource( 29 )

[node name="CoyoteTimer" type="Timer" parent="." index="4"]
wait_time = 0.2
one_shot = true

[node name="Camera2D" parent="." index="5" instance=ExtResource( 23 )]

[node name="HurtedTimerControl" type="Timer" parent="." index="6"]
wait_time = 0.3
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="." index="8"]

[node name="LifeController" type="Node2D" parent="CanvasLayer" index="0"]
position = Vector2( 23, 19 )
script = ExtResource( 25 )
life_texture = ExtResource( 26 )

[node name="EnergyController" type="Node2D" parent="CanvasLayer" index="1"]
position = Vector2( 23, 29 )
script = ExtResource( 24 )
energy_texture = ExtResource( 27 )

[node name="Timer" type="Timer" parent="CanvasLayer/EnergyController" index="0"]

[node name="Pause" parent="CanvasLayer" index="2" instance=ExtResource( 30 )]

[node name="DashDuration" type="Timer" parent="." index="9"]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="." index="10"]
one_shot = true

[node name="GhostTimer" type="Timer" parent="." index="11"]
wait_time = 0.05
[connection signal="animation_finished" from="Body/Sprite" to="StateMachine" method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Body/AttackCollision" to="." method="_on_AttackCollision_body_entered"]
[connection signal="body_entered" from="Body/DashCollisionDamage" to="." method="_on_DashCollisionDamage_body_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/EnergyController/Timer" to="CanvasLayer/EnergyController" method="_on_Timer_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_DashDuration_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
